--- a/app/views/devise/registrations/_terms.html.erb
+++ b/app/views/devise/registrations/_terms.html.erb
@@ -1,16 +1,3 @@
 <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida tristique eros nec dignissim. Fusce ac ipsum sit
-  amet velit accumsan placerat. Quisque congue malesuada rhoncus. Phasellus accumsan vehicula eros, eget pretium libero
-  dictum quis. Praesent eu suscipit justo. Ut sollicitudin sodales eleifend. Mauris cursus scelerisque eros, eget
-  rhoncus sapien lobortis quis. Suspendisse malesuada ultricies maximus. Donec auctor diam mauris, sit amet dignissim
-  sem dapibus at. Donec vehicula ligula vehicula ante dignissim, in vulputate mi egestas. Donec vitae neque dui. Fusce
-  efficitur eros mauris. Quisque sed lectus mauris.
-
-  Sed eget lectus vulputate, molestie nulla ac, finibus lectus. Maecenas turpis nibh, posuere a arcu sagittis, convallis
-  viverra nibh. Nullam et justo quis tortor finibus bibendum. Nam rutrum auctor velit, id ullamcorper lectus. Phasellus
-  ultrices sem nec tortor rutrum varius. Fusce malesuada metus in ipsum placerat suscipit. Nulla facilisi. Quisque est
-  justo, blandit a fermentum a, elementum in massa. Nulla odio orci, sollicitudin vel hendrerit sit amet, imperdiet in
-  ipsum. Quisque sit amet enim libero. Donec luctus gravida auctor. Vestibulum massa nisi, tincidunt non blandit sed,
-  pretium a tellus. Sed ullamcorper molestie mi, eget facilisis felis venenatis dictum.
-
+  Está é uma versão de demonstração do software Life To Remind. Clique em finalizar a demonstração após usar para apagar seu usuário.
 <p>
