--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,7 +22,7 @@
         <div class="col">
           <h1>Suporte</h1>
           <ul>
-            <li>Entre em contato</li>
+            <li><%= link_to "Entre em contato", destroy_user_session_path, method: "delete", style: "color: #999999; font-size: 13px;" %></li>
             <li>Deixe uma sugestão</li>
           </ul>
         </div>
