--- a/app/views/plans/swotedit.html.erb
+++ b/app/views/plans/swotedit.html.erb
@@ -101,10 +101,8 @@
 
     <div class="justify-buttons">
       <%= link_to " Voltar para Planos", new_plan_path, class: "btn btn-default lnr lnr-arrow-left" %>
-      <%= link_to " Continuar para Missão", new_mission_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+      <%= button_tag " Continuar para Missão", type: 'button', onclick: "checkSwotAttributes()", name: "swot_to_mission", id: "swot_to_mission", class: 'btn btn-primary lnr lnr-arrow-right align-right', remote: true %>
     </div>
-
-
   </div>
 </div>
 
