--- a/app/views/plans/_inputswotpart.html.erb
+++ b/app/views/plans/_inputswotpart.html.erb
@@ -6,9 +6,11 @@
                        nil,
                        autocomplete: "off",
                        placeholder: "Adicionar #{texto_da_acao}",
-                       class: "field-add-swot" %>
+                       class: "field-add-swot",
+                       id: "field-#{texto_da_acao}"
+    %>
     <%= button_tag class: "icon-add-swot" do %>
-      <i class="lnr lnr-arrow-right"></i>
+      <i class="lnr lnr-arrow-right"> Adicionar </i>
     <% end %>
   </div>
 
