--- a/app/views/visions/new.html.erb
+++ b/app/views/visions/new.html.erb
@@ -56,6 +56,6 @@
   <br/>
   <div class="justify-buttons">
     <%= link_to " Voltar para Missão", new_mission_path, class: "btn btn-default lnr lnr-arrow-left" %>
-    <%= link_to " Continuar para Valores", new_value_path, class: "btn btn-primary lnr lnr-arrow-right align-right" %>
+    <%= button_tag " Continuar para Valores", type: 'button', onclick: "checkVisionAttributes()", name: "vision_to_values", id: "vision_to_values", class: 'btn btn-primary lnr lnr-arrow-right align-right', remote: true %>
   </div>
 </div>
