Adding integration tests to visions and csf

--- a/app/views/csfs/edit.html.erb
+++ b/app/views/csfs/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render partial: "form", locals: { action_text: "Atualizar" } %>
+<div class="container">
+  <h3>Edição de Fatores Críticos de Sucesso</h3>
+  <br/>
+  <%= render partial: "form", locals: {action_text: "Atualizar"} %>
+</div>
