--- a/app/views/visions/edit.html.erb
+++ b/app/views/visions/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render partial: "form", locals: { texto_da_acao: "Atualizar" } %>
+<div class="container">
+  <h3>Edição de Visão</h3>
+  <br/>
+  <%= render partial: "form", locals: {texto_da_acao: "Atualizar"} %>
+</div>
