Adding shoulda matchers, integration tests to values, flash messages to accessdenied

--- a/app/views/values/index.html.erb
+++ b/app/views/values/index.html.erb
@@ -8,7 +8,7 @@
           <div class="shape-text">
           </div>
         </div>
-        <div class="offer-content">
+        <div class="offer-content" id="card_of_value">
           <h3 class="lead color-dark">
             <%= value.name %>
           </h3>
