--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Activity</h1>
+<div class="container">
+  <h1>Edição de Atividade</h1>
 
-<%= render 'form', activity: @activity %>
-
-<%= link_to 'Show', @activity %> |
-<%= link_to 'Back', activities_path %>
+  <%= render 'form', activity: @activity %>
+</div>
