--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -2,7 +2,7 @@
   <h3 class="p-t-50 p-b-20">Editar papéis</h3>
   <div class="col-xs-8">
     <% @roles.each do |role| %>
-      <div class="offer offer-radius offer-paper">
+      <div class="offer offer-radius offer-paper" id="card_of_paper">
         <div class="shape">
           <div class="shape-text">
           </div>
