Integration tests to objectives and deleting editobjectiveS method

--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -3,5 +3,5 @@
 
   <%= render partial: 'form', locals: {action_text: "Editar"}, objective: @objective %>
 
-  <%= link_to "Voltar", objectives_path, class:"btn btn-default" %>
+  <%= link_to "Voltar", myplan_path, class:"btn btn-default" %>
 </div>
