--- a/app/views/spheres/index.html.erb
+++ b/app/views/spheres/index.html.erb
@@ -4,7 +4,7 @@
   <% @spheres.each do |sphere| %>
 
     <div class="col-sm-6">
-      <div class="card">
+      <div class="card" id="card_sphere">
         <div class="card-body">
           <h5 class="card-header">Âmbito</h5>
           <div class="padding-all">
