editobjective method integration test

--- a/app/views/objectives/editobjective.html.erb
+++ b/app/views/objectives/editobjective.html.erb
@@ -40,6 +40,8 @@
         </h3>
         <h6>Âmbito: <%= @objective.sphere.name %></h6>
         <h6>Data: <%= @objective.created_at.strftime("%d/%m/%Y") %></h6>
+        <h6>Plano: <%= @current_plan.name %></h6>
+
         <br/>
         <span class="card-divider"></span>
         <br/>
