Swotparts and value integrations update tests

--- a/app/views/plans/_inputswotpart.html.erb
+++ b/app/views/plans/_inputswotpart.html.erb
@@ -9,11 +9,9 @@
                        class: "field-add-swot",
                        id: "field-#{texto_da_acao}"
     %>
-    <%= button_tag class: "icon-add-swot" do %>
+    <%= button_tag class: "icon-add-swot", id: "add-#{texto_da_acao}" do %>
       <i class="lnr lnr-arrow-right"> Adicionar </i>
     <% end %>
   </div>
-
-
 <% end %>
 
