--- a/app/views/plans/swotedit.html.erb
+++ b/app/views/plans/swotedit.html.erb
@@ -40,8 +40,8 @@
             <div class="p-b-15">
               <strong><%= strength.name %></strong>
               <span class="align-right">
-              <%= link_to " ", edit_swotpart_path(strength), class: "btn btn-white lnr lnr-pencil" %>
-                <%= link_to " ", strength, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+              <%= link_to " ", edit_swotpart_path(strength), class: "btn btn-white lnr lnr-pencil", id: "edit-strength" %>
+                <%= link_to " ", strength, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-strength" %>
             </span>
             </div>
           </div>
@@ -54,8 +54,8 @@
             <div class="p-b-15">
               <strong><%= weak.name %></strong>
               <span class="align-right">
-              <%= link_to " ", edit_swotpart_path(weak), class: "btn btn-white lnr lnr-pencil" %>
-                <%= link_to " ", weak, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+              <%= link_to " ", edit_swotpart_path(weak), class: "btn btn-white lnr lnr-pencil", id: "edit-weakness" %>
+                <%= link_to " ", weak, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-weakness" %>
                </span>
             </div>
           </div>
@@ -72,8 +72,8 @@
 
               <strong><%= opportunity.name %></strong>
               <span class="align-right">
-              <%= link_to " ", edit_swotpart_path(opportunity), class: "btn btn-white lnr lnr-pencil" %>
-                <%= link_to " ", opportunity, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+              <%= link_to " ", edit_swotpart_path(opportunity), class: "btn btn-white lnr lnr-pencil", id: "edit-opportunity"  %>
+                <%= link_to " ", opportunity, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-opportunity"  %>
             </span>
             </div>
           </div>
@@ -86,8 +86,8 @@
             <div class="p-b-15">
               <strong><%= threat.name %></strong>
               <span class="align-right">
-              <%= link_to " ", edit_swotpart_path(threat), class: "btn btn-white lnr lnr-pencil" %>
-                <%= link_to " ", threat, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+              <%= link_to " ", edit_swotpart_path(threat), class: "btn btn-white lnr lnr-pencil", id: "edit-threat"  %>
+                <%= link_to " ", threat, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-threat"  %>
                </span>
             </div>
           </div>
