Roles and spheres test integration updates

--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -4,7 +4,7 @@
   <%= render "form", value: @role %>
 
   <div class="container p-t-30">
-    <%= link_to " Remover", @role, method: :delete, class: "btn btn-danger lnr lnr-circle-minus" %>
+    <%= link_to " Remover", @role, method: :delete, class: "btn btn-danger lnr lnr-circle-minus", id: "delete-role" %>
   </div>
 
 </div>
