--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -7,7 +7,7 @@
           <div class="shape-text">
           </div>
         </div>
-        <div class="offer-content">
+        <div class="offer-content" id="card-role">
           <h3 class="lead color-dark">
             Papél chave: <%= role.name %>
             Como me vejo no futuro: <%= role.description %>
