--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="search-group-paper m-t-20">
     <%= form.text_field :name, autocomplete: "off",  placeholder:"Papel chave", class: "search-field-paper-name" %>
     <%= form.text_area :description, autocomplete: "off",  placeholder:"Como me vejo no futuro nesse papel", class: "search-field-paper-description" %>
-    <%= button_tag class: "icon-paper" do %>
+    <%= button_tag class: "icon-paper", id: "button-create-role" do %>
       <i class="lnr lnr-arrow-right"></i>
     <% end %>
   </div>
