--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -217,10 +217,10 @@
                 <%= render template: "objectives/index" %>
               </div>
               <div class="row">
-                <%= link_to new_objective_path do %>
+                <%= link_to new_objective_path, id: "button-create-objective" do %>
                   <div class="col-xs-12 p-t-10">
                     <div class="dashed dashed-border">
-                      <div class="dashed-content ">
+                      <div class="dashed-content">
                         <h3 class="lead box-gray-dashed">
                           <span class="lnr lnr-plus-circle"></span>
                         </h3>
