Adding export json

--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,6 +1,11 @@
 <div class="container p-t-40">
   <% if current_user.selected_plan %>
-    <div class="p-b-10" align="right">
+    <div class="p-b-10">
+      <span  class="align-right">
+      <%= link_to " Importar Planos", myplan_path, class: "btn btn-default lnr lnr-file-add" %>
+      <%= link_to " Exportar Planos", plans_export_path(format: "json"), data: {disable_with: " Arquivo Gerado"}, class: "btn btn-default lnr lnr-file-add" %>
+      </span>
+
       <%= link_to " Gerar PDF", plans_pdf_path(id: @current_plan, format: :pdf), data: {disable_with: " Gerando arquivo..."}, class: "btn btn-warning lnr lnr-file-add" %>
       <%= link_to " Revisar Plano", plans_swotedit_path, class: "btn btn-success lnr lnr-sync" %>
       <%= link_to " Gerenciar Planos", plans_path, method: "get", class: "btn btn-primary lnr lnr-cog" %>
