--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -93,8 +93,15 @@
   </div>
   <br>
   <span class="align-right">
+    <!--
+    %= link_to " Carregar Planos", plans_import_page_path, class: "btn btn-success btn-outline lnr lnr-upload" %
+    %= link_to " Exportar Planos", plans_export_path(format: "json"), data: {disable_with: " Arquivo Gerado"}, class: "btn btn-dark btn-outline lnr lnr-download" %
+    -->
+
     <%= link_to " Carregar Planos", plans_import_page_path, class: "btn btn-success btn-outline lnr lnr-upload" %>
-    <%= link_to " Exportar Planos", plans_export_path(format: "json"), data: {disable_with: " Arquivo Gerado"}, class: "btn btn-dark btn-outline lnr lnr-download" %>
+    <%= link_to " Exportar Planos", plans_path, data: {disable_with: " Arquivo Gerado"}, class: "btn btn-dark btn-outline lnr lnr-download" %>
+    <h5>* Funcionalidades em desenvolvimento</h5>
+
   </span>
   <%= link_to "Novo plano", new_plan_path, class: "btn btn-primary", id: "button-create-plan" %>
 </div>
