--- a/app/views/plans/import_page.html.erb
+++ b/app/views/plans/import_page.html.erb
@@ -1,25 +1,23 @@
 <div class="container">
-
   <div class="wrap-collabsible p-t-60 p-b-20">
     <input id="collapsible" class="toggle" type="checkbox" style="display: none" checked>
     <label for="collapsible" class="lbl-toggle">Importar Planos</label>
     <div class="collapsible-content">
       <div class="content-inner">
         <div class="content-text p-b-10">
-          Faça upload dos seus planos a partir de um arquivo gerado no Life to Remind previamente.
+          Faça upload dos seus planos a partir de um arquivo gerado no Life to Remind previamente. Clique em Procurar arquivo para importar.
 
           <br/>
           <br/>
-          Seu arquivo deve:
+          Para importar dados com sucesso, seu arquivo deve:
 
           <br/>
           <br/>
-          - Ter no máximo X kbytes
+          - Deve conter um JSON valido.
           <br/>
-          - Não ter sido alterado pelo usuário
+          - Deve ter no máximo 20 kbytes.
           <br/>
-          -
-
+          - Não deve ter sido alterado pelo usuário.
           <br/>
           <br/>
 
@@ -27,18 +25,19 @@
       </div>
     </div>
   </div>
-
   <!--
-  %= form_tag import_plans_path, multipart: true do %
-    %= file_field_tag :file %
-    %= submit_tag "Importar", class: "btn btn-primary" %
-  % end %
+  <div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+  </div>
   -->
-  <%= link_to " Importar", plans_import_page_path, class: "btn btn-primary" %>
-  <br/>
-  <h5>* Funcionalidade em desenvolvimento</h5>
 
-  <br/>
-  <%= link_to " Gerenciar Planos", plans_path, class: "btn btn-default lnr lnr-cog align-right" %>
+  <%= form_tag import_plans_path, multipart: true  do %>
+    <%= file_field_tag :file, class: "custom-file-input", accept: "application/json" %>
+    <br/>
+    <div class="align-right">
+      <%= link_to " Gerenciar Planos", plans_path, class: "btn btn-default lnr lnr-cog" %>
+    </div>
+    <%= submit_tag "Importar", class: "btn btn-primary", id: "file-plans-submit", data: { disable_with: "Enviando arquivo..." } %>
+  <% end %>
 </div>
 
